@@ -69,28 +69,50 @@
 
 	<properties>
 		<project.java.version>1.8</project.java.version>
-		<project.java.version.plusone>1.9</project.java.version.plusone>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<file.host>https://www.bmf-steuerrechner.de</file.host>
 		<classes.package.directory>info/kuechler/bmf/taxcalculator</classes.package.directory>
 		<file.download.target>${project.build.directory}/download-files</file.download.target>
 		<project.generated.directory>${project.build.directory}/generated-classes</project.generated.directory>
 		<file.generated.target>${project.generated.directory}/${classes.package.directory}</file.generated.target>
+		<org.junit.jupiter.version>5.3.2</org.junit.jupiter.version>
+		<org.junit.platform.version>1.3.2</org.junit.platform.version>
+		<javax.xml.bind.version>2.3.1</javax.xml.bind.version>
+		<javax.xml.jaxb-impl.version>2.1</javax.xml.jaxb-impl.version>
+		<javax.annotation.version>1.3.2</javax.annotation.version>
 	</properties>
 
 	<dependencies>
 
 		<!-- test dependencies -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${org.junit.jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-params</artifactId>
+		    <version>${org.junit.jupiter.version}</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${org.junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.junit.platform</groupId>
+        	<artifactId>junit-platform-launcher</artifactId>
+        	<version>${org.junit.platform.version}</version>
+        	<scope>test</scope>
+        </dependency>
+		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.5</version>
+			<version>4.5.6</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -103,19 +125,19 @@
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
-		    <version>3.7</version>
+		    <version>3.8.1</version>
 		    <scope>test</scope>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-csv</artifactId>
-		    <version>1.5</version>
+		    <version>1.6</version>
 		    <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>info.kuechler.bmf.taxapi</groupId>
 			<artifactId>taxapi</artifactId>
-			<version>2018.1.0</version>
+			<version>2019.0.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -138,14 +160,14 @@
 			<!-- log4j-2 adapter -->
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.11.0</version>
+			<version>2.11.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<!-- log4j-2 impl -->
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.11.0</version>
+			<version>2.11.1</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -175,7 +197,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.0</version>
 				<configuration>
 					<source>${project.java.version}</source>
 					<target>${project.java.version}</target>
@@ -188,6 +210,18 @@
 				<artifactId>wagon-maven-plugin</artifactId>
 				<version>2.0.0</version>
 				<executions>
+					<execution>
+						<id>download-2019</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>download-single</goal>
+						</goals>
+						<configuration>
+							<url>${file.host}</url>
+							<fromFile>javax.faces.resource/daten/xmls/Lohnsteuer2019.xml.xhtml</fromFile>
+							<toFile>${file.download.target}/Lohnsteuer2019Big.xml</toFile>
+						</configuration>
+					</execution>
 					<execution>
 						<id>download-2018</id>
 						<phase>generate-sources</phase>
@@ -443,7 +477,7 @@
 			<plugin>
 				<groupId>net.revelc.code.formatter</groupId>
 				<artifactId>formatter-maven-plugin</artifactId>
-				<version>2.7.2</version>
+				<version>2.8.0</version>
 				<executions>
 					<execution>
 						<id>format</id>
@@ -470,7 +504,7 @@
 			<plugin>
 	    			<groupId>org.apache.maven.plugins</groupId>
 	    			<artifactId>maven-site-plugin</artifactId>
-	    			<version>3.7</version>
+	    			<version>3.7.1</version>
 			</plugin>
 			
 			<plugin>
@@ -486,6 +520,21 @@
                 </configuration>
             </plugin>
 
+			<!-- surefire latest version for parameterized junit5 tests -->
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.22.1</version>
+				<executions>
+					<execution>
+						<id>default-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -494,12 +543,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>2.9</version>
+				<version>3.0.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.0.1</version>
 				<reportSets>
 					<reportSet>
 						<reports>
@@ -526,27 +575,24 @@
 			<activation>
 				<jdk>9</jdk>
 			</activation>
-			<build>
-				<plugins>
-					<plugin>
-					    <groupId>org.apache.maven.plugins</groupId>
-					    <artifactId>maven-surefire-plugin</artifactId>
-					    <version>2.21.0</version>
-						<executions>
-							<execution>
-								<id>default-test</id>
-								<phase>test</phase>
-								<goals>
-									<goal>test</goal>
-								</goals>
-								<configuration>
-									<argLine>--add-modules java.xml.bind</argLine>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
+			<dependencies>
+				<dependency>
+				    <groupId>javax.xml.bind</groupId>
+				    <artifactId>jaxb-api</artifactId>
+				    <version>${javax.xml.bind.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>javax.xml</groupId>
+					<artifactId>jaxb-impl</artifactId>
+					<version>${javax.xml.jaxb-impl.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+				    <groupId>javax.annotation</groupId>
+				    <artifactId>javax.annotation-api</artifactId>
+				    <version>${javax.annotation.version}</version>
+				</dependency>
+			</dependencies>
 		</profile>
 		<profile>
 			<!-- profile for jdk10 -->
@@ -554,27 +600,24 @@
 			<activation>
 				<jdk>10</jdk>
 			</activation>
-			<build>
-				<plugins>
-					<plugin>
-					    <groupId>org.apache.maven.plugins</groupId>
-					    <artifactId>maven-surefire-plugin</artifactId>
-					    <version>2.21.0</version>
-						<executions>
-							<execution>
-								<id>default-test</id>
-								<phase>test</phase>
-								<goals>
-									<goal>test</goal>
-								</goals>
-								<configuration>
-									<argLine>--add-modules java.xml.bind</argLine>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
+			<dependencies>
+				<dependency>
+				    <groupId>javax.xml.bind</groupId>
+				    <artifactId>jaxb-api</artifactId>
+				    <version>${javax.xml.bind.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>javax.xml</groupId>
+					<artifactId>jaxb-impl</artifactId>
+					<version>${javax.xml.jaxb-impl.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+				    <groupId>javax.annotation</groupId>
+				    <artifactId>javax.annotation-api</artifactId>
+				    <version>${javax.annotation.version}</version>
+				</dependency>
+			</dependencies>
 		</profile>
 		
 		<profile>
@@ -614,7 +657,7 @@
 								<configuration>
 									<rules>
 										<requireJavaVersion>
-											<version>[${project.java.version},${project.java.version.plusone})</version>
+											<version>[1.8,1.9)</version>
 										</requireJavaVersion>
 									</rules>
 								</configuration>
@@ -641,7 +684,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>3.0.0</version>
+						<version>3.0.1</version>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
